[package]
name = "dlf-server"
version = "0.0.0"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
futures = "0.3"
dotenv = "0.15"
envconfig = "0.8"
envconfig_derive = "0.8"
indoc = "0.3"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.3", default-features = false, features = ["macros", "postgres", "runtime-tokio", "tls"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
